--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"react-router-dom": "^6.0.2",
 		"react-router-hash-link": "^2.4.3",
 		"react-scripts": "5.0.1",
+		"react-toastify": "^9.1.3",
 		"styled-components": "^5.3.6",
 		"swiper": "^9.2.0",
 		"tsparticles": "^2.9.3"
