--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"react-i18next": "^12.0.0",
 		"react-icons": "^4.3.1",
 		"react-modal": "^3.15.1",
+		"react-parallax": "^3.5.1",
 		"react-particles": "^2.9.3",
 		"react-responsive": "^9.0.2",
 		"react-router-dom": "^6.0.2",
