--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"react-toastify": "^9.1.3",
 		"styled-components": "^5.3.6",
 		"swiper": "^9.2.0",
+		"three": "^0.153.0",
 		"tsparticles": "^2.9.3"
 	},
 	"scripts": {
