--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"framer-motion": "^7.6.9",
 		"i18n": "^0.15.1",
 		"i18next": "^22.4.6",
+		"lodash": "^4.17.21",
 		"react": "^18.2.0 ",
 		"react-animation-on-scroll": "^5.1.0",
 		"react-dom": "^18.0.2",
@@ -55,6 +56,7 @@
 		]
 	},
 	"devDependencies": {
+		"@types/lodash.debounce": "^4.0.7",
 		"@types/styled-components": "^5.1.25",
 		"typescript": "^4.5.4"
 	}
