--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@emotion/styled": "^11.9.3",
 		"@juggle/resize-observer": "^3.4.0",
 		"@mui/material": "^5.8.5",
+		"@types/react-scroll": "^1.8.7",
 		"@vercel/analytics": "^1.0.0",
 		"animate.css": "^4.1.1",
 		"framer-motion": "^7.6.9",
@@ -21,16 +22,13 @@
 		"react-icons": "^4.3.1",
 		"react-modal": "^3.15.1",
 		"react-parallax": "^3.5.1",
-		"react-particles": "^2.9.3",
 		"react-responsive": "^9.0.2",
 		"react-router-dom": "^6.0.2",
 		"react-router-hash-link": "^2.4.3",
 		"react-scripts": "5.0.1",
-		"react-toastify": "^9.1.3",
 		"styled-components": "^5.3.6",
 		"swiper": "^9.2.0",
-		"three": "^0.153.0",
-		"tsparticles": "^2.9.3"
+		"three": "^0.153.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
